fixed bug in krsp-locmap

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,11 +3,13 @@
 S3method(krsp_hitlist,krsp)
 S3method(krsp_locmap,krsp)
 S3method(krsp_needs_br,krsp)
+S3method(krsp_progress,krsp)
 S3method(krsp_tables,krsp)
 export(krsp_connect)
 export(krsp_hitlist)
 export(krsp_locmap)
 export(krsp_needs_br)
+export(krsp_progress)
 export(krsp_tables)
 export(loc_to_numeric)
 import(dplyr)
