--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,8 @@ RoxygenNote: 5.0.1
 Imports: RMySQL,
     assertthat,
     ggvis,
-    DBI
+    DBI,
+    lubridate
 URL: https://github.com/mstrimas/krsp
 BugReports: https://github.com/mstrimas/krsp/issues
 Suggests: knitr,
