--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,8 @@ export(krsp_hitlist)
 export(krsp_locmap)
 export(krsp_needs_br)
 export(krsp_progress)
+export(krsp_sql)
 export(krsp_tables)
 export(loc_to_numeric)
 import(dplyr)
+importFrom(assertthat,assert_that)
