--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: krsp
 Title: Working with the Kluane Red Squirrel Project Database
-Version: 0.0.0.901
+Version: 0.0.0.902
 Authors@R: "Matthew Strimas-Mackey <mstrimas@gmail.com> [aut,cre]"
 Description: This package is designed to help user bring data from the KRSP
     database into R. In addition, common database queries are standardized as R
@@ -14,7 +14,8 @@ RoxygenNote: 5.0.1
 Imports: assertthat,
     ggvis,
     DBI,
-    lubridate
+    lubridate,
+    lazyeval
 URL: https://github.com/mstrimas/krsp
 BugReports: https://github.com/mstrimas/krsp/issues
 Suggests: knitr,
