trapping checks done

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,15 @@ S3method(check_behaviour,krsp)
 S3method(check_behaviour_locs,krsp)
 S3method(check_behaviour_mode,krsp)
 S3method(check_behaviour_time,krsp)
+S3method(check_trapping,krsp)
+S3method(check_trapping_collwt,krsp)
+S3method(check_trapping_colours,krsp)
+S3method(check_trapping_dna,krsp)
+S3method(check_trapping_fate,krsp)
+S3method(check_trapping_locs,krsp)
+S3method(check_trapping_newdna,krsp)
+S3method(check_trapping_tags,krsp)
+S3method(check_trapping_weight,krsp)
 S3method(krsp_hitlist,krsp)
 S3method(krsp_locmap,krsp)
 S3method(krsp_needs_br,krsp)
@@ -13,6 +22,15 @@ export(check_behaviour)
 export(check_behaviour_locs)
 export(check_behaviour_mode)
 export(check_behaviour_time)
+export(check_trapping)
+export(check_trapping_collwt)
+export(check_trapping_colours)
+export(check_trapping_dna)
+export(check_trapping_fate)
+export(check_trapping_locs)
+export(check_trapping_newdna)
+export(check_trapping_tags)
+export(check_trapping_weight)
 export(krsp_connect)
 export(krsp_hitlist)
 export(krsp_locmap)
