added krsp_pool, fixed year_list

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,5 +20,6 @@ URL: https://github.com/mstrimas/krsp
 BugReports: https://github.com/mstrimas/krsp/issues
 Suggests: knitr,
     rmarkdown,
-    RMySQL
+    RMySQL,
+    pool
 VignetteBuilder: knitr
