--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,6 +51,7 @@ export(krsp_connect)
 export(krsp_hitlist)
 export(krsp_locmap)
 export(krsp_needs_br)
+export(krsp_pool)
 export(krsp_progress)
 export(krsp_sql)
 export(krsp_tables)
