updated for shiny app

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,9 +22,9 @@ S3method(check_trapping_newdna,krsp)
 S3method(check_trapping_tags,krsp)
 S3method(check_trapping_weight,krsp)
 S3method(krsp_hitlist,krsp)
-S3method(krsp_locmap,krsp)
 S3method(krsp_needs_br,krsp)
 S3method(krsp_progress,krsp)
+S3method(krsp_rattlemap,krsp)
 S3method(krsp_tables,krsp)
 export(check_behaviour)
 export(check_behaviour_loc)
@@ -49,10 +49,10 @@ export(check_trapping_tags)
 export(check_trapping_weight)
 export(krsp_connect)
 export(krsp_hitlist)
-export(krsp_locmap)
 export(krsp_needs_br)
 export(krsp_pool)
 export(krsp_progress)
+export(krsp_rattlemap)
 export(krsp_sql)
 export(krsp_tables)
 export(loc_to_numeric)
