--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(check_behaviour,krsp)
 S3method(check_behaviour_loc,krsp)
 S3method(check_behaviour_mode,krsp)
 S3method(check_behaviour_time,krsp)
+S3method(check_collars,krsp)
 S3method(check_nest,krsp)
 S3method(check_nest_dna,krsp)
 S3method(check_nest_grid,krsp)
@@ -21,15 +22,18 @@ S3method(check_trapping_loc,krsp)
 S3method(check_trapping_newdna,krsp)
 S3method(check_trapping_tags,krsp)
 S3method(check_trapping_weight,krsp)
+S3method(krsp_collars,krsp)
 S3method(krsp_hitlist,krsp)
 S3method(krsp_needs_br,krsp)
 S3method(krsp_progress,krsp)
 S3method(krsp_rattlemap,krsp)
 S3method(krsp_tables,krsp)
+S3method(krsp_top,krsp)
 export(check_behaviour)
 export(check_behaviour_loc)
 export(check_behaviour_mode)
 export(check_behaviour_time)
+export(check_collars)
 export(check_nest)
 export(check_nest_dna)
 export(check_nest_grid)
@@ -47,6 +51,7 @@ export(check_trapping_loc)
 export(check_trapping_newdna)
 export(check_trapping_tags)
 export(check_trapping_weight)
+export(krsp_collars)
 export(krsp_connect)
 export(krsp_hitlist)
 export(krsp_needs_br)
@@ -55,6 +60,7 @@ export(krsp_progress)
 export(krsp_rattlemap)
 export(krsp_sql)
 export(krsp_tables)
+export(krsp_top)
 export(loc_to_numeric)
 import(dplyr)
 importFrom(assertthat,assert_that)
