changes to address points 2-7 of shiny app

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ S3method(check_trapping_weight,krsp)
 S3method(krsp_collars,krsp)
 S3method(krsp_colours,krsp)
 S3method(krsp_hitlist,krsp)
+S3method(krsp_litter_lookup,krsp)
 S3method(krsp_needs_br,krsp)
 S3method(krsp_progress,krsp)
 S3method(krsp_rattlemap,krsp)
@@ -56,6 +57,7 @@ export(krsp_collars)
 export(krsp_colours)
 export(krsp_connect)
 export(krsp_hitlist)
+export(krsp_litter_lookup)
 export(krsp_needs_br)
 export(krsp_pool)
 export(krsp_progress)
