--- a/NAMESPACE
+++ b/NAMESPACE
@@ -56,6 +56,7 @@ export(check_trapping_weight)
 export(krsp_collars)
 export(krsp_colours)
 export(krsp_connect)
+export(krsp_dashboard)
 export(krsp_hitlist)
 export(krsp_litter_lookup)
 export(krsp_needs_br)
