census progress function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ S3method(check_trapping_loc,krsp)
 S3method(check_trapping_newdna,krsp)
 S3method(check_trapping_tags,krsp)
 S3method(check_trapping_weight,krsp)
+S3method(krsp_census_progress,krsp)
 S3method(krsp_collars,krsp)
 S3method(krsp_colours,krsp)
 S3method(krsp_hitlist,krsp)
@@ -53,6 +54,7 @@ export(check_trapping_loc)
 export(check_trapping_newdna)
 export(check_trapping_tags)
 export(check_trapping_weight)
+export(krsp_census_progress)
 export(krsp_collars)
 export(krsp_colours)
 export(krsp_connect)
