--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ S3method(check_trapping_newdna,krsp)
 S3method(check_trapping_tags,krsp)
 S3method(check_trapping_weight,krsp)
 S3method(krsp_census_progress,krsp)
+S3method(krsp_censusmap,krsp)
 S3method(krsp_collars,krsp)
 S3method(krsp_colours,krsp)
 S3method(krsp_hitlist,krsp)
@@ -55,6 +56,7 @@ export(check_trapping_newdna)
 export(check_trapping_tags)
 export(check_trapping_weight)
 export(krsp_census_progress)
+export(krsp_censusmap)
 export(krsp_collars)
 export(krsp_colours)
 export(krsp_connect)
